add another view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Pastikan Thymeleaf aktif
+# Please make sure that Thymeleaf is active
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -13,3 +13,4 @@ spring.thymeleaf.cache=false
 
 # Aktifkan auto restart (hot reload)
 spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
