--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/library
+spring.datasource.url=jdbc:mysql://localhost:3306/library_data
 spring.datasource.username=root
 spring.datasource.password=noekasep@ok!!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,3 +14,8 @@ spring.thymeleaf.cache=false
 # Aktifkan auto restart (hot reload)
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+#for debug
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
